# PolyGS

./: .gitignore  README.md  partitio.py  partition.py  segmentation.py  spt_partition.py
KSR/: CMakeLists.txt  ksr_buildings.cpp  ksr_modified.cpp
KSR/include/: Kinetic_surface_reconstruction_3.h
parallel-cut-pursuit/python/: setup.py
pycut_pursuit/: .gitignore  __init__.py
